@@ -5,14 +5,15 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 class SednaCliReverseTest {
 
   private static final Path CMS_REFERENCE =
-      Paths.get("..", "examples", "cms-reference").normalize().toAbsolutePath();
+      io.sedna.core.examples.ExamplesLayout.findProjectRoot(
+              Path.of("..").toAbsolutePath().normalize(), "cms-reference")
+          .orElseThrow();
 
   @Test
   void reverseCommandWritesDna(@TempDir Path tempDir) throws java.io.IOException {
